[package]
authors = ["Brandon Matthews <bmatthews@zipcar.com>"]
name = "lp55231"
version = "0.2.1"
categories = ["embedded", "hardware-support", "no-std"]
description = "Driver for the TI LP55231 using embedded-hal traits"
keywords = ["embedded-hal-driver", "ti", "lp55231", "i2c", "hal"]
license = "0BSD"
repository = "https://github.com/thenewwazoo/lp55231/"

[dependencies]
bitflags = "1.0.4"
embedded-hal = "0.2.1"
